// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`servie cookie store should sign cookies 1`] = `
Object {
  "set-cookie": Array [
    "a=eyJ0ZXN0Ijp0cnVlfQ%3D%3D._6w9E-9zKPwThSnsjUD9fJY5RHs",
    "b=ImFiYyI%3D.sxQLgTnZKd6G9fXWj161wzF6yEA",
  ],
}
`;

exports[`servie cookie store should work with regular cookies 1`] = `
Object {
  "set-cookie": Array [
    "a=eyJ0ZXN0Ijp0cnVlfQ%3D%3D",
    "b=ImFiYyI%3D",
  ],
}
`;
